--- a/common/css/global.css
+++ b/common/css/global.css
@@ -612,3 +612,109 @@ transition:all 0.3s ease-out 0s;-webkit-transition:all 0.3s ease-out 0s;}
 .nav_sm i:nth-child(7){transition-delay:0.6s;-webkit-transition-delay:0.6s;}
 .nav_sm.show i{transform:translateY(0);-webkit-transform:translateY(0);opacity:1;}
 .nav_sm i.now{background:#fff;}
+.mj-mask{
+  position:fixed;
+  left:0;
+  top:-3000px;
+  width:100%;
+  height:100%;
+  background-color:rgba(255,255,255,.8);
+  z-index:9999;
+  opacity:0;
+}
+.mj-msg {
+  max-width: 520px;
+  box-sizing:border-box;
+  padding: 10px;
+  position:fixed;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  margin: auto;
+  height:460px;
+  background-color: #fff;
+  z-index:10000;
+  background-image:url('../image/bg_w.png');
+  border-radius:4px;
+  box-shadow:0 0 100px #888;
+  transform:translateY(-3000px);
+  opacity:0;
+}
+
+.mj-weichat {
+  max-width: 260px;
+  height:300px;
+  position:fixed;
+  left:0;
+  right:0;
+  bottom:0;
+  top:0;
+  margin:auto;
+  transform:translateY(-3000px);
+  opacity:0;
+  z-index:10000;
+}
+.mj-weichat img{
+  width:100%;
+}
+.mj-weichat h6 {
+  text-align:center;
+  background-color: #fff;
+  line-height:20px;
+  font-size:14px;
+  padding-bottom: 20px;
+  height:20px;
+}
+
+.mj-msg h6 {
+  font-size: 20px;
+  text-align:center;
+  font-family:'幼圆';
+  margin: 20px 0 10px;
+}
+
+.mj-msg input,
+.mj-msg textarea {
+  width: 100%;
+  height: 40px;
+  border-radius:2px;
+  box-sizing:border-box;
+  padding:0 10px;
+  margin-top: 10px;
+  transition: all ease .3s;
+}
+
+.mj-msg textarea {
+  height: 200px;
+  padding:10px;
+}
+
+.mj-msg input[type="submit"]{
+  cursor:pointer;
+}
+
+.mj-msg input[type="submit"]:hover {
+  background-color: #ff0740;
+  border-color:transparent;
+  color:#fff;
+}
+
+.mj-cue {
+  background-color: #ff0740;
+  height: 30px;
+  width: 160px;
+  text-align:center;
+  font-size: 14px;
+  font-family:'幼圆';
+  color:#fff;
+  z-index: 15000;
+  position:fixed;
+  left:0;
+  right:0;
+  margin: auto;
+  top:-45px;
+  opacity:0;
+  line-height:30px;
+  border-radius:15px;
+}
