--- a/common/css/global.css
+++ b/common/css/global.css
@@ -718,3 +718,8 @@ transition:all 0.3s ease-out 0s;-webkit-transition:all 0.3s ease-out 0s;}
   line-height:30px;
   border-radius:15px;
 }
+@media(max-width: 1000px){
+	.icp{
+		display: none!important;
+	}
+}
